--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@nextui-org/react": "^2.4.6",
     "@react-input/mask": "^1.2.5",
+    "framer-motion": "^11.3.30",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
